--- a/vip2.html
+++ b/vip2.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lần 1</title>
+    <title>pro</title>
   </head>
   <body>
-    <h1>Lần 1</h1>
-    <h2>Lần 2</h2>
-    <h3>Lần 3</h3>
-    <p>Lần 4</p>
+    <h1>vippro</h1>
   </body>
 </html>
